# twin

backend/: pyproject.toml
backend/data/: facts.json  style.txt  summary.txt
frontend/app/: layout.tsx
scripts/: deploy.ps1  deploy.sh  destroy.ps1  destroy.sh
